src/app.css
@import '@fontsource/fira-mono';

body {
  height: 100%;
  width: 100%;
  margin: 0;
  position: fixed;
  text-align: center;
}

html {
  overflow-y: scroll;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #2b3238;
  --color-text: #e6e6e6;
  color: var(--color-text);
  --font-mono: 'Fira Mono', monospace;
  --font-body: "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
  "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif,
  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-family: var(--font-body), serif;
}

::-moz-selection {
  background: #a730355a;
  color: #E2CB14;
}

::selection {
  background: #a730355a;
  color: #E2CB14;
}

*::-webkit-scrollbar {
  width: 0.5em;
}

*::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.00);
}

*::-webkit-scrollbar-thumb {
  background-color: #a7303555;
}

